[Fixes #27180683] Layout issue on Admin Center sidebar page
 - update CSS to allow Admin Center to stretch in Chrome

--- a/app/stylesheets/new_main.sass
+++ b/app/stylesheets/new_main.sass
@@ -859,6 +859,8 @@ table.generic-table
     .left-nav-label, .by-source, .by-time-period
       +clearfix
       margin-bottom: 10px
+    .by-time-period
+      width: 100%
     img.side-note
       float: right
       margin-left: 10px
